@@ -1,5 +1,8 @@
 == In Git
 
+=== Bugfixes
+* Line filter works on JRuby with Scenarios without steps. (Aslak Hellesøy)
+
 === Changed Features
 * The JSON schema now puts background inside the "elements" Array. Makes parsing simpler. (Aslak Hellesøy)
 
